add solr6 support

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,3 +1,9 @@
 DataObject:
   extensions:
     - 'SearchUpdater_ObjectHandler'
+SiteTree:
+  extensions:
+    - 'SolrSearchSiteTreeExtension'
+ContentController:
+  extensions:
+    - 'SolrSearchControllerExtension'
